--- a/kubernetes/apps/security/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/apps/security/cert-manager/app/helmrelease.yaml
@@ -15,41 +15,13 @@ spec:
         name: jetstack
         namespace: flux-system
   install:
-    crds: CreateReplace
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
-    crds: CreateReplace
     remediation:
       strategy: rollback
       retries: 3
-  values:
-    crds:
-      enabled: true
-    dns01RecursiveNameservers: https://1.1.1.1:443/dns-query,https://1.0.0.1:443/dns-query
-    dns01RecursiveNameserversOnly: true
-    cainjector:
-      resources:
-        requests:
-          cpu: 10m
-          memory: 64Mi
-        limits:
-          memory: 128Mi
-    webhook:
-      resources:
-        requests:
-          cpu: 10m
-          memory: 16Mi
-        limits:
-          memory: 32Mi
-    prometheus:
-      enabled: true
-      servicemonitor:
-        enabled: true
-    resources:
-      requests:
-        cpu: 10m
-        memory: 32Mi
-      limits:
-        memory: 64Mi
+  valuesFrom:
+    - kind: ConfigMap
+      name: cert-manager-helm-values
