--- a/kubernetes/apps/security/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/apps/security/external-secrets/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app external-secrets
+  name: external-secrets
 spec:
   interval: 30m
   chart:
@@ -15,62 +15,13 @@ spec:
         name: external-secrets
         namespace: flux-system
   install:
-    crds: CreateReplace
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
-    crds: CreateReplace
     remediation:
       strategy: rollback
       retries: 3
-  values:
-    installCRDs: true
-    replicaCount: 2
-    topologySpreadConstraints:
-      - maxSkew: 1
-        topologyKey: kubernetes.io/hostname
-        whenUnsatisfiable: DoNotSchedule
-        labelSelector:
-          matchLabels:
-            app.kubernetes.io/name: *app
-            app.kubernetes.io/instance: *app
-    leaderElect: true
-    resources:
-      requests:
-        cpu: 10m
-        memory: 48Mi
-      limits:
-        memory: 96Mi
-    serviceMonitor:
-      enabled: true
-      interval: 1m
-    webhook:
-      replicaCount: 2
-      topologySpreadConstraints:
-        - maxSkew: 1
-          topologyKey: kubernetes.io/hostname
-          whenUnsatisfiable: DoNotSchedule
-          labelSelector:
-            matchLabels:
-              app.kubernetes.io/name: external-secrets-cert-controller
-              app.kubernetes.io/instance: *app
-      serviceMonitor:
-        enabled: true
-        interval: 1m
-      resources:
-        requests:
-          cpu: 10m
-          memory: 32Mi
-        limits:
-          memory: 64Mi
-    certController:
-      resources:
-        requests:
-          cpu: 10m
-          memory: 48Mi
-        limits:
-          memory: 96Mi
-      serviceMonitor:
-        enabled: true
-        interval: 1m
+  valuesFrom:
+    - kind: ConfigMap
+      name: external-secrets-helm-values
