--- a/kubernetes/apps/security/glauth/ks.yaml
+++ b/kubernetes/apps/security/glauth/ks.yaml
@@ -4,19 +4,21 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app glauth
-  namespace: flux-system
+  namespace: &namespace security
 spec:
-  targetNamespace: security
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: security
+  interval: 30m
   path: ./kubernetes/apps/security/glauth/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: false
-  interval: 30m
+    namespace: flux-system
+  targetNamespace: *namespace
   timeout: 5m
+  wait: false
