--- a/kubernetes/apps/storage/minio/ks.yaml
+++ b/kubernetes/apps/storage/minio/ks.yaml
@@ -4,22 +4,21 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app minio
-  namespace: flux-system
+  namespace: &namespace storage
 spec:
-  targetNamespace: storage
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword-store
+      namespace: security
+  interval: 30m
   path: ./kubernetes/apps/storage/minio/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: false
-  interval: 30m
+    namespace: flux-system
+  targetNamespace: *namespace
   timeout: 5m
-  postBuild:
-    substitute:
-      APP: *app
+  wait: false
