--- a/kubernetes/apps/storage/volsync/app/prometheusrule.yaml
+++ b/kubernetes/apps/storage/volsync/app/prometheusrule.yaml
@@ -10,7 +10,8 @@ spec:
       rules:
         - alert: VolSyncComponentAbsent
           annotations:
-            summary: VolSync component has disappeared from Prometheus target discovery.
+            summary: >
+              VolSync component has disappeared from Prometheus target discovery.
           expr: |
             absent(up{job="volsync-metrics"})
           for: 15m
@@ -18,9 +19,8 @@ spec:
             severity: critical
         - alert: VolSyncVolumeOutOfSync
           annotations:
-            summary: >-
-              {{ $labels.obj_namespace }}/{{ $labels.obj_name }} volume
-              is out of sync.
+            summary: >
+              {{ $labels.obj_namespace }}/{{ $labels.obj_name }} volume is out of sync.
           expr: |
             volsync_volume_out_of_sync == 1
           for: 15m
