--- a/kubernetes/apps/utilities/atuin/ks.yaml
+++ b/kubernetes/apps/utilities/atuin/ks.yaml
@@ -4,23 +4,23 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app atuin
-  namespace: flux-system
+  namespace: &namespace utilities
 spec:
-  targetNamespace: utilities
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cloudnative-pg-cluster
+      namespace: database
     - name: onepassword-store
+      namespace: security
+  interval: 30m
   path: ./kubernetes/apps/utilities/atuin/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: false
-  interval: 30m
+    namespace: flux-system
+  targetNamespace: *namespace
   timeout: 5m
-  postBuild:
-    substitute:
-      APP: *app
+  wait: false
