--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -11,7 +11,7 @@ components:
 resources:
   # Flux-Kustomizations
   - ./democratic-csi/ks.yaml
-  # - ./minio/ks.yaml
+  - ./minio/ks.yaml
   - ./openebs/ks.yaml
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
