--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
   # Flux-Kustomizations
   - ./cloudnative-pg/ks.yaml
   - ./dragonfly/ks.yaml
-  # - ./pgadmin/ks.yaml
-  # - ./postgres-backup/ks.yaml
+  - ./pgadmin/ks.yaml
+  - ./postgres-backup/ks.yaml
