--- a/kubernetes/components/volsync/minio/externalsecret.yaml
+++ b/kubernetes/components/volsync/minio/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     name: *name
     template:
       data:
-        RESTIC_REPOSITORY: "s3:https://s3-dev.${SECRET_DOMAIN}/volsync/${APP}"
+        RESTIC_REPOSITORY: "s3:https://s3.${SECRET_DOMAIN}/volsync/${APP}"
         RESTIC_PASSWORD: "{{ .RESTIC_PASSWORD }}"
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
