--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -10,7 +10,7 @@ components:
   - ../../components/substitutions
 resources:
   # Flux-Kustomizations
-  - ./dokuwiki/ks.yaml
+  # - ./dokuwiki/ks.yaml
   - ./hoarder/ks.yaml
   - ./immich/ks.yaml
   - ./immich-folder-album-creator/ks.yaml
