--- a/kubernetes/apps/observability/kube-prometheus-stack/addons/scrapeconfigs/node-exporter.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/addons/scrapeconfigs/node-exporter.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   staticConfigs:
     - targets:
-        - pikvm.${SECRET_DOMAIN_INT}:9100
+        - pikvm.${SECRET_DOMAIN}:9100
         - pve.${SECRET_DOMAIN}:9100
   metricsPath: /metrics
   relabelings:
