--- a/kubernetes/apps/security/cert-manager/app/prometheusrule.yaml
+++ b/kubernetes/apps/security/cert-manager/app/prometheusrule.yaml
@@ -3,7 +3,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: cert-manager.rules
+  name: cert-manager-rules
 spec:
   groups:
     - name: cert-manager.rules
