--- a/kubernetes/apps/observability/exporters/dcgm-exporter/ks.yaml
+++ b/kubernetes/apps/observability/exporters/dcgm-exporter/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: nvidia-device-plugin
-      namespace: kube-system
+      namespace: system
   interval: 30m
   path: ./kubernetes/apps/observability/exporters/dcgm-exporter/app
   prune: true
