--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -9,24 +9,20 @@ spec:
   chart:
     spec:
       chart: kube-prometheus-stack
-      version: 68.5.0
+      version: 69.1.0
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
         namespace: flux-system
   install:
-    crds: Skip
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
-    crds: Skip
     remediation:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: kube-prometheus-stack-crds
-      namespace: observability
     - name: democratic-csi-iscsi
       namespace: storage
   valuesFrom:
@@ -35,7 +31,10 @@ spec:
       valuesKey: kube-state-metrics-config.yaml
   values:
     crds:
-      enabled: false
+      enabled: true
+      upgradeJob:
+        enabled: true
+        forceConflicts: true
     cleanPrometheusOperatorObjectNames: true
     alertmanager:
       ingress:
