--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -31,12 +31,9 @@ spec:
     deploymentAnnotations:
       secret.reloader.stakater.com/reload: *app
     image:
-      # repository: public.ecr.aws/docker/library/nextcloud
-      # tag: 30.0.5-fpm-alpine
-      # flavor: fpm-alpine
       flavor: fpm
     nextcloud:
-      host: &host nc.${SECRET_DOMAIN}
+      host: nextcloud.${SECRET_DOMAIN}
       extraInitContainers:
         - name: init-db
           image: ghcr.io/onedr0p/postgres-init:16
@@ -72,6 +69,8 @@ spec:
           secure: ssl
           port: 465
           authtype: LOGIN
+      defaultConfigs:
+        redis.config.php: false
       configs:
         # Log levels: 0=debug, 1=info, 2=warn, 3=error, 4=fatal
         logging.config.php: |-
@@ -82,59 +81,22 @@ spec:
             'loglevel' => 0,
             'logdateformat' => 'F d, Y H:i:s'
           );
-        local.config.php: |-
+        misc.config.php: |-
           <?php
           $CONFIG = array (
-            'trusted_proxies' =>
-            array (
-              0 => '127.0.0.1',
-              1 => '10.69.0.0/16',
-              2 => '10.96.0.0/16',
-            ),
-            'forwarded_for_headers' =>
-            array (
-              0 => 'HTTP_X_FORWARDED_FOR',
-            ),
+            'auth.bruteforce.protection.enabled' => true,
             'default_phone_region' => 'SE',
             'trashbin_retention_obligation' => 'auto, 30',
-            'auth.bruteforce.protection.enabled' => true,
           );
-        # custom.config.php: |-
-        #   <?php
-        #   $CONFIG = array (
-        #     'overwriteprotocol' => 'https',
-        #     'overwrite.cli.url' => 'https://nc.${SECRET_DOMAIN}',
-        #     'overewritehost' => 'nc.${SECRET_DOMAIN}',
-        #     'filelocking.enabled' => 'true',
-        #     'default_phone_region' => 'SE',
-        #     'enable_previews' => true,
-        #     'maintenance_window_start' => 1,
-        #     'trusted_proxies' =>
-        #       array (
-        #         0 => '127.0.0.1',
-        #         1 => '10.69.0.0/16',
-        #         2 => '10.96.0.0/16',
-        #         3 => '192.168.20.0/24',
-        #       ),
-        #       'forwarded_for_headers' => array('HTTP_X_FORWARDED_FOR'),
-        #   );
-        # misc.config.php: |-
-        #   <?php
-        #   $CONFIG = array (
-        #     'overwrite.cli.url' => 'https://nc.${SECRET_DOMAIN}',
-        #     'default_phone_region' => 'SE',
-        #     'trashbin_retention_obligation' => 'auto, 30',
-        #     'auth.bruteforce.protection.enabled' => true,
-        #   );
-        # proxy.config.php: |-
-        #   <?php
-        #   $CONFIG = array (
-        #     'trusted_proxies' => array(
-        #       0 => '127.0.0.1',
-        #       1 => '${CLUSTER_POD_CIDR}',
-        #     ),
-        #     'forwarded_for_headers' => array('HTTP_X_FORWARDED_FOR'),
-        #   );
+        proxy.config.php: |-
+          <?php
+          $CONFIG = array (
+            'trusted_proxies' => array(
+              0 => '127.0.0.1',
+              1 => '${CLUSTER_POD_CIDR}',
+            ),
+            'forwarded_for_headers' => array('HTTP_X_FORWARDED_FOR'),
+          );
         # redis.config.php: |-
         #   <?php
         #     $CONFIG = array (
@@ -251,8 +213,6 @@ spec:
         databaseKey: POSTGRES_DB
         usernameKey: POSTGRES_USER
         passwordKey: POSTGRES_PASSWORD
-    redis:
-      enabled: false
     metrics:
       enabled: false
       https: true
