--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -69,6 +69,11 @@ spec:
           secure: ssl
           port: 465
           authtype: LOGIN
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 82
+        runAsGroup: 82
+        readOnlyRootFilesystem: false
       defaultConfigs:
         redis.config.php: false
       configs:
