--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -31,7 +31,10 @@ spec:
     deploymentAnnotations:
       secret.reloader.stakater.com/reload: *app
     image:
-      flavor: fpm
+      repository: public.ecr.aws/docker/library/nextcloud
+      tag: 30.0.5-fpm-alpine
+      flavor: fpm-alpine
+      # flavor: fpm
     nextcloud:
       host: nextcloud.${SECRET_DOMAIN}
       extraInitContainers:
@@ -194,6 +197,8 @@ spec:
           location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
             deny all;
           }
+    redis:
+      enabled: false
     nginx:
       enabled: true
       config:
