--- a/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
@@ -286,9 +286,11 @@ spec:
       image:
         repository: docker.io/collabora/code
         tag: 24.04.12.3.1@sha256:76d50a50c39210ae85ce20e422f4241a2080f10e0fcee65733f22eba8a00ec73
-      env:
+      extraEnv:
         - name: dictionaries
-          value: "de_DE en_GB en_US es_ES fr_FR"
+          value: "de_DE en_GB en_US es_ES fr_FR sv_SE"
+        - name: server_name
+          value: "collabora.${SECRET_DOMAIN}"
       extra_params: --o:ssl.termination=true --o:ssl.enable=false --o:welcome.enable=false --o:frame-ancestors=nextcloud.${SECRET_DOMAIN}
       existingSecret:
         enabled: true
@@ -304,7 +306,10 @@ spec:
           nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
           nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
         hosts:
-          - host: collabora.${SECRET_DOMAIN}
+          - host: &host collabora.${SECRET_DOMAIN}
             paths:
               - path: /
                 pathType: ImplementationSpecific
+        tls:
+          - hosts:
+              - *host
