--- a/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
@@ -286,12 +286,13 @@ spec:
       image:
         repository: docker.io/collabora/code
         tag: 24.04.12.3.1@sha256:76d50a50c39210ae85ce20e422f4241a2080f10e0fcee65733f22eba8a00ec73
-      extraEnv:
+      collabora:
+        extra_params: --o:ssl.termination=true --o:ssl.enable=false --o:welcome.enable=false --o:frame-ancestors=nextcloud.${SECRET_DOMAIN}
+        extraEnv:
         - name: dictionaries
           value: "de_DE en_GB en_US es_ES fr_FR sv_SE"
         - name: server_name
           value: "collabora.${SECRET_DOMAIN}"
-      extra_params: --o:ssl.termination=true --o:ssl.enable=false --o:welcome.enable=false --o:frame-ancestors=nextcloud.${SECRET_DOMAIN}
       existingSecret:
         enabled: true
         secretName: *app
