--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -4,9 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 components:
-  - ../../components/alerts
-  - ../../components/namespace
-  - ../../components/sops
-  - ../../components/substitutions
+  - ../../components/common
 resources: []
   # Flux-Kustomizations
