--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -4,10 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: network
 components:
-  - ../../components/alerts
-  - ../../components/namespace
-  - ../../components/sops
-  - ../../components/substitutions
+  - ../../components/common
 resources:
   # Flux-Kustomizations
   - ./cloudflared/ks.yaml
