--- a/kubernetes/apps/utilities/kustomization.yaml
+++ b/kubernetes/apps/utilities/kustomization.yaml
@@ -4,10 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: utilities
 components:
-  - ../../components/alerts
-  - ../../components/namespace
-  - ../../components/sops
-  - ../../components/substitutions
+  - ../../components/common
 resources:
   # Flux-Kustomizations
   - ./atuin/ks.yaml
