--- a/kubernetes/apps/observability/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/loki/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
         type: filesystem
       schemaConfig:
         configs:
-          - from: "2024-04-01" # quote
+          - from: "2024-04-01" # Must be quoted.
             store: tsdb
             object_store: filesystem
             schema: v13
