--- a/kubernetes/apps/security/onepassword/ks.yaml
+++ b/kubernetes/apps/security/onepassword/ks.yaml
@@ -9,6 +9,11 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: onepassword
+      namespace: *namespace
   healthCheckExprs:
     - apiVersion: external-secrets.io/v1beta1
       kind: ClusterSecretStore
