--- a/kubernetes/apps/database/dragonfly/ks.yaml
+++ b/kubernetes/apps/database/dragonfly/ks.yaml
@@ -36,6 +36,10 @@ spec:
       namespace: database
     - name: onepassword
       namespace: security
+  healthCheckExprs:
+    - apiVersion: dragonflydb.io/v1alpha1
+      kind: Dragonfly
+      current: status.phase == 'ready'
   interval: 1h
   path: ./kubernetes/apps/database/dragonfly/cluster
   prune: true
