--- a/kubernetes/apps/security/authentik/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authentik/app/helmrelease.yaml
@@ -44,8 +44,7 @@ spec:
       replicas: 1
       initContainers:
         - name: init-db
-          image: ghcr.io/onedr0p/postgres-init
-          tag: 16
+          image: ghcr.io/onedr0p/postgres-init:16
           envFrom:
             - secretRef:
                 name: *app
