--- a/kubernetes/apps/database/cloudnative-pg/cluster/postgres16/postgres16.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/postgres16/postgres16.yaml
@@ -42,7 +42,7 @@ spec:
       endpointURL: https://s3.${SECRET_DOMAIN}
       # Note: serverName version needs to be incremented when recovering from
       # an existing CloudNativePG cluster.
-      serverName: &currentCluster postgres16-v4
+      serverName: &currentCluster postgres16-v5
       s3Credentials:
         accessKeyId:
           name: cloudnative-pg
@@ -52,13 +52,13 @@ spec:
           key: s3-secret-key
   # Note: previousCluster needs to be set to the name of the previous cluster
   # when recovering from an existing CloudNativePG cluster.
-  # bootstrap:
-  #   recovery:
-  #     source: &previousCluster postgres16-v3
+  bootstrap:
+    recovery:
+      source: &previousCluster postgres16-v4
   # Note: externalClusters is needed when recovering from an existing
   # CloudNativePG cluster.
-  # externalClusters:
-  #   - name: *previousCluster
-  #     barmanObjectStore:
-  #       <<: *barmanObjectStore
-  #       serverName: *previousCluster
+  externalClusters:
+    - name: *previousCluster
+      barmanObjectStore:
+        <<: *barmanObjectStore
+        serverName: *previousCluster
