--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -6,10 +6,10 @@ namespace: network
 components:
   - ../../components/common
   - ../../components/repos
-resources:
+resources: []
   # Flux-Kustomizations
-  - ./cloudflared/ks.yaml
-  - ./echo-server/ks.yaml
-  - ./external-dns/ks.yaml
-  - ./ingress-nginx/ks.yaml
-  - ./tailscale-operator/ks.yaml
+  # - ./cloudflared/ks.yaml
+  # - ./echo-server/ks.yaml
+  # - ./external-dns/ks.yaml
+  # - ./ingress-nginx/ks.yaml
+  # - ./tailscale-operator/ks.yaml
