--- a/kubernetes/apps/security/cert-manager/app/clusterissuer.yaml
+++ b/kubernetes/apps/security/cert-manager/app/clusterissuer.yaml
@@ -1,23 +1,23 @@
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cert-manager.io/clusterissuer_v1.json
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-production
-spec:
-  acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
-    privateKeySecretRef:
-      name: letsencrypt-production
-    solvers:
-      - dns01:
-          cloudflare:
-            apiTokenSecretRef:
-              name: cert-manager-cloudflare
-              key: CLOUDFLARE_API_TOKEN
-        selector:
-          dnsZones:
-            - "${SECRET_DOMAIN}"
+# ---
+# # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cert-manager.io/clusterissuer_v1.json
+# apiVersion: cert-manager.io/v1
+# kind: ClusterIssuer
+# metadata:
+#   name: letsencrypt-production
+# spec:
+#   acme:
+#     server: https://acme-v02.api.letsencrypt.org/directory
+#     privateKeySecretRef:
+#       name: letsencrypt-production
+#     solvers:
+#       - dns01:
+#           cloudflare:
+#             apiTokenSecretRef:
+#               name: cert-manager-cloudflare
+#               key: CLOUDFLARE_API_TOKEN
+#         selector:
+#           dnsZones:
+#             - "${SECRET_DOMAIN}"
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cert-manager.io/clusterissuer_v1.json
 apiVersion: cert-manager.io/v1
